KYAN-47 fix color not working with strong tag in rte

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
@@ -26,6 +26,10 @@
   @extend .t-line-height--150;
   @extend .t-letter-spacing--default;
 
+  strong {
+    color: unset;
+  }
+
   &-xs {
     @extend .t-font-size--12;
   }
