--- a/applications/common/frontend/src/atomic-design-system/05-page/p.page/p.page.scss
+++ b/applications/common/frontend/src/atomic-design-system/05-page/p.page/p.page.scss
@@ -19,6 +19,12 @@
 @use 'src/atomic-design-system/03-organism/o.body-background' as
   o-body-background;
 
+$bulma-navbar-height: 3.25rem;
+
+html {
+  // this prevents jumping content when clicking on anchor link in table of contents (KYAN-50)
+  scroll-padding-top: $bulma-navbar-height;
+}
 
 body.lines {
   @include o-body-background.o-body-background--lines;
