WSIO-213 using width/height from authoring not only for image but also for image size

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/image/image.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/image/image.html
@@ -37,8 +37,8 @@
     </sly>
     <sly data-sly-test="${!model.isVideo}">
       <img class="${model.isRounded ? 'is-rounded' : ''}"
-           width="${model.imageWidth}"
-           height="${model.imageHeight}"
+           width="${model.width}"
+           height="${model.height}"
            src="${model.assetReference}"
            alt="${model.alt}">
     </sly>
