KYAN-17 replaced sass variables by css variables.

--- a/applications/common/frontend/src/atomic-design-system/00-token/t.font/t.font-weight.scss
+++ b/applications/common/frontend/src/atomic-design-system/00-token/t.font/t.font-weight.scss
@@ -31,18 +31,18 @@ $map_t-font-weights: (
   '700': 700,
 );
 
-@mixin t-font-weight($name) {
-  font-weight: map.get($map_t-font-weights, #{$name});
-}
+// @mixin t-font-weight($name) {
+//   font-weight: map.get($map_t-font-weights, #{$name});
+// }
 
-@each $name, $value in $map_t-font-weights {
-  // i.e. `.t-font-weight--normal`
-  .t-font-weight--#{$name} {
-    @include t-font-weight($name);
-  }
+// @each $name, $value in $map_t-font-weights {
+//   // i.e. `.t-font-weight--normal`
+//   .t-font-weight--#{$name} {
+//     @include t-font-weight($name);
+//   }
 
-  // i.e. `.t-font-weight--400`
-  .t-font-weight--#{$value} {
-    @include t-font-weight($value);
-  }
-}
+//   // i.e. `.t-font-weight--400`
+//   .t-font-weight--#{$value} {
+//     @include t-font-weight($value);
+//   }
+// }
