--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.feature.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.feature.scss
@@ -24,7 +24,7 @@
 
 @mixin m-level-item-feature {
   > .container {
-    margin: 0;
+    margin: #{var(--spacing-value-0)};
 
     > .image {
       &:first-of-type {
