--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.message/m.message.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.message/m.message.scss
@@ -16,45 +16,77 @@
  * -->
  */
 
-@use 'sass:map';
-
 @use 'src/atomic-design-system/00-token/t.color' as color;
 @use 'src/atomic-design-system/00-token/t.border';
 
-$message-variants: ('primary', 'link', 'info', 'success', 'warning', 'danger');
-
-@mixin m-message-variant($variant) {
-  &.is-#{$variant} {
-    @extend .t-border-color__#{$variant}--400;
-
-    .message-header {
-      @extend .t-background-color__#{$variant}--100;
-    }
-  }
-}
+//$message-variants: ('primary', 'link', 'info', 'success', 'warning', 'danger');
 
 @mixin m-message {
   // "None" variant, base for the other variants
-  @extend .t-border-color__grey--400;
-  @extend .t-border-weight-left--3;
-  @extend .t-border-radius--2;
+  border-color: #{var(--color-gray--400)} !important;
+  border-left: #{var(--border-weight-3)} solid;
+  border-radius: #{var(--border-radius-2)};
 
   box-shadow: 0 0.2rem 0.5rem rgb(0 0 0 / 5%), 0 0 0.05rem rgb(0 0 0 / 10%);
 
   .message-header {
-    @extend .t-color__grey--900;
-    @extend .t-background-color__grey--200;
-    @extend .t-border-top-left-radius--0;
+    color: #{var(--color-grey--900)} !important;
+    background-color: #{var( --color-grey--200)} !important;
+    border-top-left-radius: #{var(--border-weight-0)};
   }
 
   .message-body {
-    @extend .t-color__grey--900;
+    color: #{var(--color-grey--900)} !important;
 
     border: none;
-    background-color: color.$white;
+    background-color: #{var(--base-color-white)};
   }
 
-  @each $variant in $message-variants {
-    @include m-message-variant($variant);
+  &.is-primary {
+    border-color: #{var(--color-primary--400)} !important;
+
+    .message-header {
+      background-color: #{var(--color-primary--100)} !important;
+    }
+  }
+
+  &.is-link {
+    border-color: #{var(--color-link--400)} !important;
+
+    .message-header {
+      background-color: #{var(--color-link--100)} !important;
+    }
+  }
+
+  &.is-info {
+    border-color: #{var(--color-info--400)} !important;
+
+    .message-header {
+      background-color: #{var(--color-info--100)} !important;
+    }
+  }
+
+  &.is-success {
+    border-color: #{var(--color-success--400)} !important;
+
+    .message-header {
+      background-color: #{var(--color-success--100)} !important;
+    }
+  }
+
+  &.is-warning {
+    border-color: #{var(--color-warning--400)} !important;
+
+    .message-header {
+      background-color: #{var(--color-warning--100)} !important;
+    }
+  }
+
+  &.is-danger {
+    border-color: #{var(--color-danger--400)} !important;
+
+    .message-header {
+      background-color: #{var(--color-danger--100)} !important;
+    }
   }
 }
