--- a/applications/common/frontend/src/components/Container/Container.scss
+++ b/applications/common/frontend/src/components/Container/Container.scss
@@ -21,17 +21,17 @@
 @use 'src/atomic-design-system/00-token/t.breakpoint' as breakpoint;
 
 .section > .container {
-  padding-bottom: map.get(spacing.$spacing-values, '5_4');
+  padding-bottom:  #{var(--spacing-value-5_4)};
 
   @include breakpoint.media-breakpoint-medium {
-    padding-bottom: map.get(spacing.$spacing-values, '6');
+    padding-bottom:  #{var(--spacing-value-6)};
   }
 
   @include breakpoint.media-breakpoint-large {
-    padding-bottom: map.get(spacing.$spacing-values, '6_3');
+    padding-bottom:  #{var(--spacing-value-6_3)};
   }
 
   &:last-child {
-    padding-bottom: map.get(spacing.$spacing-values, '0');
+    padding-bottom:  #{var(--spacing-value-0)};
   }
 }
