--- a/applications/common/frontend/src/global-variables.scss
+++ b/applications/common/frontend/src/global-variables.scss
@@ -19,6 +19,7 @@
 @use 'src/atomic-design-system/00-token/t.color' as colors;
 @use 'src/atomic-design-system/00-token/t.font' as fonts;
 @use 'src/atomic-design-system/00-token/t.position' as positions;
+@use 'src/atomic-design-system/00-token/t.zindex' as zindex;
 @use 'src/bulma-overwrite/variables' as variables;
 
 @mixin add-css-variables($map, $short-name) {  
@@ -27,7 +28,7 @@
     }
  }
 
- :root {
+:root {
     // Borders from: src/atomic-design-system/00-token/t.border
     @include add-css-variables(borders.$map_t-border-radius, border-weight);
     @include add-css-variables(borders.$map_t-border-radius, border-radius);
@@ -36,6 +37,7 @@
     @include add-css-variables(breakpoints.$map_t-breakpoints-px, breakpoint);
 
     // Colors from: src/atomic-design-system/00-token/t.color
+    @include add-css-variables(colors.$map_t-base-color, base-color);
     @include add-css-variables(colors.$map_t-color-by-id, color);
     @include add-css-variables(colors.$map_t-color-shadows, color);
 
@@ -45,6 +47,9 @@
      @include add-css-variables(fonts.$map_t-font-weights, font-weight);
      @include add-css-variables(fonts.$map_t-letter-spacings, letter-spacing);
      @include add-css-variables(fonts.$map_t-line-heights, line-height);
+
+     // z-indexes from: src/atomic-design-system/00-token/t.zindex
+     @include add-css-variables(zindex.$map_t-z-index, z-index);
 
     // Bulma overwited variables from: src/bulma-overwrite/variables
     @include add-css-variables(variables.$spacing-values, spacing-value);
