--- a/applications/common/frontend/src/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/atomic-design-system/00-token/t.color/t.color.scss
@@ -18,10 +18,12 @@
 
 @use 'sass:map';
 
-$black: #000000;
-$white: #ffffff;
-$code-text: #36464e;
-$code-background: #f5f5f5;
+$map_t-base-color: (
+  black: #000000,
+  white: #ffffff,
+  code-text: #36464e,
+  code-background: #f5f5f5, 
+);
 
 $map_t-color-ids: (
   'primary',
@@ -118,54 +120,54 @@ $map_t-color-shadows: (
   shadow--1: #605e78,
 );
 
-@mixin t-color($id, $shade) {
-  color: map.get(
-    $map_t-color-by-id,
-    #{$id}--#{$shade}
-  ) !important; // overwrite Bulma
-}
+// @mixin t-color($id, $shade) {
+//   color: map.get(
+//     $map_t-color-by-id,
+//     #{$id}--#{$shade}
+//   ) !important; // overwrite Bulma
+// }
 
-@mixin t-background-color($id, $shade) {
-  background-color: map.get(
-    $map_t-color-by-id,
-    #{$id}--#{$shade}
-  ) !important; // overwrite Bulma
-}
+// @mixin t-background-color($id, $shade) {
+//   background-color: map.get(
+//     $map_t-color-by-id,
+//     #{$id}--#{$shade}
+//   ) !important; // overwrite Bulma
+// }
 
-@mixin t-border-color($id, $shade) {
-  border-color: map.get(
-    $map_t-color-by-id,
-    #{$id}--#{$shade}
-  ) !important; // overwrite Bulma
-}
+// @mixin t-border-color($id, $shade) {
+//   border-color: map.get(
+//     $map_t-color-by-id,
+//     #{$id}--#{$shade}
+//   ) !important; // overwrite Bulma
+// }
 
-@mixin t-outline-color($id, $shade) {
-  outline-color: map.get(
-    $map_t-color-by-id,
-    #{$id}--#{$shade}
-  ) !important; // overwrite Bulma
-}
+// @mixin t-outline-color($id, $shade) {
+//   outline-color: map.get(
+//     $map_t-color-by-id,
+//     #{$id}--#{$shade}
+//   ) !important; // overwrite Bulma
+// }
 
-@each $id in $map_t-color-ids {
-  @each $shade in $map_t-color-shades {
-    // i.e. `.t-color__primary--100`
-    .t-color__#{$id}--#{$shade} {
-      @include t-color(#{$id}, #{$shade});
-    }
+// @each $id in $map_t-color-ids {
+//   @each $shade in $map_t-color-shades {
+//     // i.e. `.t-color__primary--100`
+//     .t-color__#{$id}--#{$shade} {
+//       @include t-color(#{$id}, #{$shade});
+//     }
 
-    // i.e. `.t-background-color__primary--100`
-    .t-background-color__#{$id}--#{$shade} {
-      @include t-background-color(#{$id}, #{$shade});
-    }
+//     // i.e. `.t-background-color__primary--100`
+//     .t-background-color__#{$id}--#{$shade} {
+//       @include t-background-color(#{$id}, #{$shade});
+//     }
 
-    // i.e. `.t-border-color__primary--100`
-    .t-border-color__#{$id}--#{$shade} {
-      @include t-border-color(#{$id}, #{$shade});
-    }
+//     // i.e. `.t-border-color__primary--100`
+//     .t-border-color__#{$id}--#{$shade} {
+//       @include t-border-color(#{$id}, #{$shade});
+//     }
 
-    // i.e. `.t-outline-color__primary--100`
-    .t-outline-color__#{$id}--#{$shade} {
-      @include t-outline-color(#{$id}, #{$shade});
-    }
-  }
-}
+//     // i.e. `.t-outline-color__primary--100`
+//     .t-outline-color__#{$id}--#{$shade} {
+//       @include t-outline-color(#{$id}, #{$shade});
+//     }
+//   }
+// }
