--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
@@ -26,7 +26,7 @@
 @use 'src/atomic-design-system/00-token/t.border';
 
 @mixin m-article-thumbnail {
-  @extend .t-color__grey--900;
+  color: #{var(--color-grey--900)} !important;
   @extend .mb-5_4;
 
   .content {
@@ -41,16 +41,25 @@
 
     .title {
       @extend .mb-4;
-      @extend .t-color__grey--900;
+      color: #{var(--color-grey--900)} !important;
     }
   }
 
   .mdi {
     @extend .px-1;
-    @extend .t-line-height--150;
-    @include font.t-font-size-fluid(22, 32);
+    line-height: 150%;
+    
+    font-size: 1.375rem;
 
-    color: color.$black;
+    @media (min-width: 768px) {
+      font-size: calc(22px + (32 - 22) * ((100vw - 768px) / (1408 - 768)));
+    }
+
+    @media (min-width: 1408px) {
+      font-size: 2rem;
+    }
+
+    color: #{var(--base-color-black)};
     transform: rotate(45deg);
   }
 
@@ -62,17 +71,17 @@
 
   .content-info-details {
     .author-content {
-      @extend .t-color__grey--900;
+      color: #{var(--color-grey--900)} !important;
       @extend .pr-5;
     }
 
     .date-content {
-      @extend .t-color__grey--700;
+      color: #{var(--color-grey--700)} !important;
       @extend .pr-3;
     }
 
     .time-content {
-      @extend .t-color__grey--700;
+      color: #{var(--color-grey--700)} !important;
     }
   }
 }
