--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.table-of-content/m.table-of-content.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.table-of-content/m.table-of-content.scss
@@ -24,8 +24,8 @@
 
 @mixin m-table-of-content {
   .table-label {
-    @extend .t-color__grey--700;
-    @extend .t-font-weight--500;
+    color: #{var(--color-grey--700)} !important;
+    font-weight: #{var(--font-weight-500)};
     @extend .mb-5;
     display: block;
   }
@@ -38,7 +38,7 @@
     align-items: flex-start;
 
     li.button {
-      @extend .t-font-weight--500;
+      font-weight: #{var(--font-weight-500)};
       @extend .mb-3;
       @extend .p-0;
       height: unset;
@@ -47,15 +47,15 @@
 
       a {
         @include link.a-animated-underline-link;
-        @extend .t-color__grey--900;
-        @extend .t-line-height--150;
+        color: #{var(--color-grey--900)} !important;
+        line-height: 150%;
       }
     }
   }
 
   .table-content-button {
     @include link.a-animated-underline-link;
-    @extend .t-color__grey--900;
+    color: #{var(--color-grey--900)} !important;
     display: inline-block;
   }
 }
