--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
@@ -24,7 +24,8 @@
 @use 'src/atomic-design-system/01-atom/a.animated-underline-link' as link;
 
 @mixin o-footer {
-  @extend .t-background-color__grey--1000;
+  background-color: #{var(--color-grey--1000)} !important;
+
   @extend .py-6_4;
 
   text-align: center;
@@ -41,40 +42,40 @@
 
     @include breakpoint.media-breakpoint-medium {
       display: block;
-      margin: 0; // center - remove
+      margin: #{var(--spacing-value-0)}; // center - remove
     }
 
     &.is-3by1 {
-      padding-top: 0;
+      padding-top: #{var(--spacing-value-0)};
     }
 
     img {
-      width: map.get(spacing.$spacing-values, '6_2');
-      height: map.get(spacing.$spacing-values, '6_2');
+      width: #{var(--spacing-value-6_2)};
+      height: #{var(--spacing-value-6_2)};
       position: unset;
     }
   }
 
   .content,
   .content.has-text-grey-darker {
-    color: map.get(colors.$map_t-color-by-id, 'grey--100') !important;
+    color: #{var(--color-grey--100)} !important;
 
     &.is-small {
       @extend .mt-5_1;
-      @extend .t-font-size--12;
+      font-size: #{var(--font-size-12)};
     }
   }
 
   .icon {
-    @extend .t-color__grey--100;
+    color: #{var(--color-grey--100)} !important;
 
     &:not(:last-of-type) {
-      margin-right: map.get(spacing.$spacing-values, '5');
+      margin-right: #{var(--spacing-value-5)};
       @include breakpoint.media-breakpoint-medium {
-        margin-right: map.get(spacing.$spacing-values, '1_2');
+        margin-right: #{var(--spacing-value-1_2)};
       }
       @include breakpoint.media-breakpoint-large {
-        margin-right: map.get(spacing.$spacing-values, '5');
+        margin-right: #{var(--spacing-value-5)};
       }
     }
   }
@@ -82,7 +83,7 @@
   .column:not(:last-of-type) {
     @extend .mb-6;
     @include breakpoint.media-breakpoint-medium {
-      margin-bottom: 0;
+      margin-bottom: #{var(--spacing-value-0)};
     }
   }
 
@@ -93,8 +94,8 @@
     .menu-label {
       margin: 0;
       text-transform: unset;
-      @extend .t-color__grey--400;
-      @extend .t-font-size--16;
+      color: #{var(--color-grey--400)} !important;
+      font-size: #{var(--font-size-16)};
     }
 
     .menu-list {
@@ -106,7 +107,7 @@
       display: inline-block;
       @include link.a-animated-underline-link;
       @extend .p-0;
-      @extend .t-color__grey--100;
+      color: #{var(--color-grey--100)} !important;
 
       &:hover {
         background-color: unset;
