--- a/applications/common/frontend/src/components/Image/Image.scss
+++ b/applications/common/frontend/src/components/Image/Image.scss
@@ -22,8 +22,8 @@
 @use 'src/atomic-design-system/00-token/t.color' as color;
 @use 'src/bulma-overwrite/variables' as spacing;
 
-$color-shadow-start: rgba(color.$black, 0.06);
-$color-shadow-end: rgba(map.get(color.$map_t-color-shadows, 'shadow--1'), 0.07);
+$color-shadow-start: rgba(#{var(--base-color-black)}, 0.06);
+$color-shadow-end: rgba(#{var(--color-shadow--1)}, 0.07);
 
 .image {
   @include image.a-image;
