KYAN-29 navbaritem drag&drop image bug fixed

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbaritem/navbaritem.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbaritem/navbaritem.html
@@ -27,10 +27,10 @@
   </sly>
   <sly data-sly-test="${model.type == 'image'}">
     <a data-sly-test="${!model.isLink}" class="navbar-item">
-      <img src="${model.image.src}" width="${model.imageWidth}" height="${model.imageHeight}"
+      <img src="${model.image.assetReference}" width="${model.imageWidth}" height="${model.imageHeight}"
            alt="${model.image.alt}"></a>
     <a data-sly-test="${model.isLink}" class="navbar-item" href="${model.imageUrl}" target="${model.openInNewTab && model.imageUrl != '' ? '_blank' : ''}">
-      <img src="${model.image.src}" width="${model.imageWidth}" height="${model.imageHeight}"
+      <img src="${model.image.assetReference}" width="${model.imageWidth}" height="${model.imageHeight}"
            alt="${model.image.alt}">
     </a>
   </sly>
